create room with user
