# src/scrum-daddy-be/pokerplanning/api.go
@@ -12,7 +12,9 @@ func Main(c *Container) {
 func AddPokerRooms(c *Container) {
 	c.Server.AddRoute("GET /api/v1/rooms", api.MakeHandler(c.HandleGetPokerRooms))
 
-	c.Server.AddRoute("POST /api/v1/rooms", api.MakeHandler(c.HandlePostPokerRooms))
+	c.Server.AddRoute("POST /api/v1/rooms", api.MakeHandler(c.HandlePostPokerRoom))
+
+	c.Server.AddRoute("POST /api/v1/rooms/with-user", api.MakeHandler(c.HandlePostPokerRoomWithUser))
 
 	c.Server.AddRoute("GET /api/v1/rooms/{id}", api.MakeHandler(c.HandleGetPokerRoom))
 
@@ -20,9 +22,7 @@ func AddPokerRooms(c *Container) {
 		"GET /api/v1/rooms/secondary/{id}",
 		api.MakeHandler(c.HandleGetSequentialPokerRoom))
 
-	//hub := NewRoomManager()
-	//go hub.listen()
-	//http.HandleFunc("/ws", func(w http.ResponseWriter, r *http.Request) {
-	//	hub.serveWs(w, r)
-	//})
+	hub := NewRoomManager()
+	go hub.listen()
+	c.Server.GetMux().HandleFunc("/ws", hub.serveWs)
 }
